--- a/index.html
+++ b/index.html
@@ -9,81 +9,150 @@
     />
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Font -->
     <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
-      href="css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
     />
 
-    <title>Daftar</title>
+    <title>Daftar Cake Kami</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello, world!</h1>
-      <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="..." alt="Card image cap" />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <section class="foto1">
+      <div class="container">
+        <h5 class="text-center mt-5 judul">Selamat Datang Di Toko Kami</h5>
+        <div class="row mt-5">
+          <div class="card-deck">
+            <div class="card card-1">
+              <img
+                class="card-img-top"
+                src="img/img (1).jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Strawberry Cake</h5>
+                <p class="card-text">
+                  Cake yang dibuat dengan cream yang sangat enak dan dibalut
+                  dengan strawberry, blueberry
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card card-2">
+              <img
+                class="card-img-top"
+                src="img/img (2).jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Chocolate Cake</h5>
+                <p class="card-text">
+                  Dibuat dengan Chocolate khusus dari italy tentunya untuk rasa
+                  jangan ditanya lagi
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 6 mins ago</small>
+              </div>
+            </div>
+            <div class="card card-3">
+              <img
+                class="card-img-top"
+                src="img/img (4).jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Biskuit Cake</h5>
+                <p class="card-text">
+                  Balutan Biskuit tentunya menambah rasa cake
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 9 mins ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 mb-5">
+          <div class="card-deck">
+            <div class="card card-4">
+              <img
+                class="card-img-top"
+                src="img/img (5).jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Blueberry Cake</h5>
+                <p class="card-text">
+                  Blueberry cake sangat cocok buat kamu yang ingin diet tapi
+                  ingin merasakan cake
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 12 mins ago</small>
+              </div>
+            </div>
+            <div class="card card-5">
+              <img
+                class="card-img-top"
+                src="img/img (6).jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Brown Cake</h5>
+                <p class="card-text">
+                  Taburan gula aren menjadikan cita rasa khusus pada cake
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 15 mins ago</small>
+              </div>
+            </div>
+            <div class="card card-6">
+              <img
+                class="card-img-top"
+                src="img/img (3).jpg"
+                alt="Card image cap"
+                height="68%"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Purple Cake</h5>
+                <p class="card-text">
+                  Buat Kamu yang bosan dengan cake yang itu itu aja
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 17 mins ago</small>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="..." alt="Card image cap" />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="..." alt="Card image cap" />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="..." alt="Card image cap" />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="js/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="js/bootstrap.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+    </section>
   </body>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script
+    src="js/jquery-3.5.1.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="js/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="js/bootstrap.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"
+  ></script>
 </html>
