--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <title>Daftar Cake Kami</title>
   </head>
   <body>
-    <section class="foto1">
-      <div class="container">
-        <h5 class="text-center mt-5 judul">Selamat Datang Di Toko Kami</h5>
-        <div class="row mt-5">
-          <div class="card-deck">
+    <div class="container">
+      <h5 class="judul text-center">Daftar Produk Toko Kami</h5>
+      <div class="row">
+        <!-- <div class="row mt-5">
+          <div class="card-deck col-4">
             <div class="card card-1">
               <img
                 class="card-img-top"
@@ -45,97 +45,10 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </div>
             </div>
-            <div class="card card-2">
-              <img
-                class="card-img-top"
-                src="img/img (2).jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Chocolate Cake</h5>
-                <p class="card-text">
-                  Dibuat dengan Chocolate khusus dari italy tentunya untuk rasa
-                  jangan ditanya lagi
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 6 mins ago</small>
-              </div>
-            </div>
-            <div class="card card-3">
-              <img
-                class="card-img-top"
-                src="img/img (4).jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Biskuit Cake</h5>
-                <p class="card-text">
-                  Balutan Biskuit tentunya menambah rasa cake
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 9 mins ago</small>
-              </div>
-            </div>
           </div>
-        </div>
-        <div class="row mt-5 mb-5">
-          <div class="card-deck">
-            <div class="card card-4">
-              <img
-                class="card-img-top"
-                src="img/img (5).jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Blueberry Cake</h5>
-                <p class="card-text">
-                  Blueberry cake sangat cocok buat kamu yang ingin diet tapi
-                  ingin merasakan cake
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 12 mins ago</small>
-              </div>
-            </div>
-            <div class="card card-5">
-              <img
-                class="card-img-top"
-                src="img/img (6).jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Brown Cake</h5>
-                <p class="card-text">
-                  Taburan gula aren menjadikan cita rasa khusus pada cake
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 15 mins ago</small>
-              </div>
-            </div>
-            <div class="card card-6">
-              <img
-                class="card-img-top"
-                src="img/img (3).jpg"
-                alt="Card image cap"
-                height="68%"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Purple Cake</h5>
-                <p class="card-text">
-                  Buat Kamu yang bosan dengan cake yang itu itu aja
-                </p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 17 mins ago</small>
-              </div>
-            </div>
-          </div>
-        </div>
+        </div> -->
       </div>
-    </section>
+    </div>
   </body>
 
   <!-- Optional JavaScript -->
@@ -155,4 +68,6 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
+
+  <script src="js/style.js"></script>
 </html>
